--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         </select>
                                         <input type='number' id='secondValue'>
                                     </div>
-                                    <button id='swap'>SWAP</button>
+                                    <p id='results'></p>
 
     </div>
     <h3 id='loading'>Loading...</h3>
