--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Exchange Rate Calculator</h1>
+    <p><b>Courtesy of</b> : https://www.exchangerate-api.com/</p>
     
     <div id='display' class='hidden'>
         
