--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                         <select id="secondCountry">
                                             <option value="AED">AED</option>
                                             <option value="ARS">ARS</option>
-                                            <option value="AUD">AUD</option>
+                                            <option value="AUD" selected>AUD</option>
                                             <option value="BGN">BGN</option>
                                             <option value="BRL">BRL</option>
                                             <option value="BSD">BSD</option>
@@ -118,7 +118,7 @@
                                             <option value="TRY">TRY</option>
                                             <option value="TWD">TWD</option>
                                             <option value="UAH">UAH</option>
-                                            <option value="USD" selected>USD</option>
+                                            <option value="USD">USD</option>
                                             <option value="UYU">UYU</option>
                                             <option value="VND">VND</option>
                                             <option value="ZAR">ZAR</option>
